# bevy_core_lab

./: .gitignore  Cargo.toml  README.md
assets/shaders/fragment/: transition_fade_color.wgsl  ui_focused_button.wgsl  ui_normal_button.wgsl
src/: main.rs
src/config/: config_manager.rs  controls.rs  mod.rs  windows.rs
src/game/: cameras.rs  game_manager.rs  mod.rs
src/graphics/: graphics_manager.rs  mod.rs  transition.rs
src/graphics/materials/: materials_transition.rs  materials_ui.rs  mod.rs
src/states/: app_state.rs  data_state.rs  game_state.rs  mod.rs  options_state.rs  profile_state.rs  state_manager.rs
src/style/: mod.rs  style_colors.rs  style_fonts.rs  style_splash.rs  style_ui.rs
src/ui/: credits.rs  gameover.rs  loadsave.rs  mod.rs  splash.rs  title.rs  ui_manager.rs
src/ui/options/: audio.rs  controls.rs  general.rs  menu.rs  mod.rs  video.rs
