[package]
name = "bevy_core_lab"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Campbell <dyl@mailbox.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# remember to remove bevy/dynamic_linking feature before releasing game
bevy =  { version = "0.13", features = [ "dynamic_linking", "file_watcher", "serialize" ] }
bevy_framepace = "0.15.0"
bevy_screen_diagnostics = "0.5.0"
bevy-inspector-egui = "0.23.2"
bevy_asset_loader = "0.20.0"
iyes_progress = "0.11.0"
leafwing-input-manager = "0.13.3"

# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# enable Link-Time-Optimization to squeeze out even more performance at the cost of very slow compile times
#[profile.release]
#lto = "thin"
#codegen-units = 1
